--- a/Week1/updatepost.html
+++ b/Week1/updatepost.html
@@ -5,7 +5,7 @@
 <br>
         <h1>Update Post.....</h1>
         <br><br>
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="btn btn-secondary">Update</button>
