--- a/Week1/createblog.html
+++ b/Week1/createblog.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Add Post.....</h1>
 <br>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-secondary">Post</button>
